# ARTC_ardrone

./: CMakeLists.txt~  README.artc_ardrone  README.md  README.md~  RTC.xml  RTC.xml20141017142029  artc_ardrone.conf  mount.sh  rtc.conf
cmake/: artc_ardrone-config.cmake.in  wix.xsl.in
doc/: conf.py.in
doc/content/: index.txt  index_j.txt
idl/: CMakeLists.txt  TimedControldata.idl  TimedNavdata.idl
include/: CMakeLists.txt
include/ardrone/: Makefile  ardrone.h~  cmake_install.cmake
include/artc_ardrone/: CMakeLists.txt  artc_ardrone.h
include/cvdrone/: CMakeLists.txt
src/: CMakeLists.txt  artc_ardrone.cpp  artc_ardrone.cpp~  artc_ardroneComp.cpp
